# 2019-Q3-EDS_Funcionais_Dia01

./: LICENSE  README.md  edf.cabal
src/: Dia01.hs
